# obdsim

./: .gitignore  README.md  pyproject.toml  vcan.sh
config/etc/network/interfaces.d/: can0
dbc/: CSS-Electronics-OBD2-v1.4.1.dbc  python-obd.dbc
docs/: elm327.md  setup.md
examples/: example_elm_scanner.py  example_elm_sim.py  example_scan_sim.py  example_vcan_sim.py  example_vehiclesim.py
obdsim/: __init__.py  basic.py  ble-elm327.py  ble_elm327.py  bt_elm327.py  listener.py  obdscanner.py  obdsignal.py  scanner.py  simulator.py  vcan.py
obdsim/bluetooth/: __init__.py  ble.py  bt.py  btc.py  uart_ble.py  uart_btc.py  uart_pty.py
obdsim/elm/: __init__.py  elm.py
obdsim/scanner/: base_scanner.py  can.py  elm.py
obdsim/scanners/: __init__.py  base_scanner.py  can.py  elm.py
obdsim/utils/: candump.py
scripts/: pican.sh  picansetup.sh  vcan.sh
tests/: test_dbc.py  test_elm_btc.py
