[tool.poetry]
name = "obdsim"
version = "0.1.0"
description = "A basic OBD2 simulator"
authors = ["gbrucepayne <gbrucepayne@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-can = "^4.0.0"
can-decoder = "^0.1.3"
cantools = "^37.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.6"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
